# auxilium

./: README.md  package-lock.json  package.json  sample_research_data.csv  vite.config.ts
.github/workflows/: release.yml
src/: App.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  logo.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/api/: auxl.ts  spreadsheet.ts
src/components/: README.md
src/components/interfaces/home/: AllTab.tsx  DropOverlay.tsx  FileInput.tsx  PaperCard.tsx  ReviewedTab.tsx  UnreviewedTab.tsx
src/components/ui/: NotificationPermission.tsx
src/components/ui/Navigation/: Toolbar.tsx
src/routes/: __root.tsx  index.tsx  oldreview.tsx  review.$paperId.tsx  review.tsx
src/stores/: research-review-store.ts  review.ts  selected-file-store.ts
src/types/: spreadsheet.ts
src/utils/: notification.ts
